@@ -146,13 +146,16 @@ function varargout = doctest(what)
 % before comparison.  A stricter mode where "internal whitespace" must
 % match is available:
 %
-% >> fprintf('a   b\nc   d\n')    % doctest: -NORMALIZEDWHITESPACE
+% >> fprintf('a   b\nc   d\n')    % doctest: -NORMALIZEWHITESPACE
 % a   b
 % c   d
 %
-% >> fprintf('a  b\nc  d\n')      % doctest: +NORMALIZEDWHITESPACE
+% >> fprintf('a  b\nc  d\n')      % doctest: +NORMALIZEWHITESPACE
 % a b
 % c d
+%
+%
+% To disable the '...' wildcard, use the -ELLIPSIS directive.
 %
 %
 % Testing Texinfo documentation
